# TreeVisual

./: .gitignore  .mcp.json  CMakeLists.txt  LICENSE  README.md  install.bat  install.sh  package-lock.json  package.json  vercel.json
.github/workflows/: build.yml  pages.yml  release.yml
Preview/: app.js  i18n.js  index.html  styles.css  vercel.json  webgl.js
Preview/api/: home.js  settings.js  tree.js
docs/: README-tc.md  README-zh.md  README.md
packaging/: README-zh.txt  README.txt
scripts/: embed-web.py
src/: tree.cpp
src/web/: app.js  i18n.js  index.html  styles.css  webgl.js
